@@ -3,10 +3,10 @@
 
 #include "atari.h"
 
-int IsSoundFileOpen(void);
-int CloseSoundFile(void);
-int OpenSoundFile(const char *szFileName);
-int WriteToSoundFile(const UBYTE *ucBuffer, unsigned int uiSize);
+int SndSave_IsSoundFileOpen(void);
+int SndSave_CloseSoundFile(void);
+int SndSave_OpenSoundFile(const char *szFileName);
+int SndSave_WriteToSoundFile(const UBYTE *ucBuffer, unsigned int uiSize);
 
 #endif
 
